--- a/package.json
+++ b/package.json
@@ -5,14 +5,31 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p ${PORT:-\"3000\"}",
+    "migrate": "dotenv ley",
+    "heroku-postbuild": "yarn migrate up && yarn build"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.1",
+    "@types/node": "^14.14.10",
+    "argon2": "^0.27.0",
+    "camelcase-keys": "^6.2.2",
+    "cookie": "^0.4.1",
+    "crypto": "^1.0.1",
+    "csrf": "^3.1.0",
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^4.0.0",
+    "ley": "^0.6.0",
     "next": "10.0.3",
+    "next-cookie": "^2.5.0",
+    "next-cookies": "^2.0.3",
+    "postgres": "^1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "@upleveled/eslint-config-upleveled": "1.2.5",
@@ -29,5 +46,8 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-testing-library": "^3.9.0",
     "typescript": "4.1.2"
-  }
+  },
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
