--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "next": "10.0.3",
     "next-cookie": "^2.5.0",
     "next-cookies": "^2.0.3",
-    "postgres": "^1.0.2",
+    "postgres": "2.0.0-beta.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
